--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
 
     <body>
         <section id="statistics">
-            
+           <h2>Parking Violation Statistics</h2>
+           <p>In the 28th Ward the most common traffic violations are missing or improper display of a city sticker (964125),
+               street cleaning (0964040B), no city sticker vehicle less than or equal to 16k lbs (0964125B), rear and front plate required (0976160A), and expired plates or temporary registration (0976160F). For each of these violations, if you choose to appeal you have a chance greater than 50% of winning. 
+           </p>
+
         </section>
 
         <section id="resources">
+            <h2>Resources</h2>
+            <h3>Handout</h3>
+            <a href="">Give the following handout to your friends to print out and share with others!</a>
 
+            <h3>Appeal Printout</h3>
+            <a href="" target="_blank">Download a PDF version of our appeal template to bring with you to your hearing!</a>
+
+            <h3>Other helpful links</h3>
+            <a href="https://www.cbsnews.com/chicago/news/parking-tickets-contest-administrative-hearing-challenge/">CBS News Article</a>
         </section>
 
         <section id="guide">
@@ -19,6 +31,16 @@
         </section>
 
         <section id="appeal">
+
+        </section>
+
+        <section id="FAQ">
+            <h2>FAQ</h2>
+            <p>Q: Should I appeal my ticket even if I am guilty of the violation?</p>
+            <p>A: </p>
+
+            <p>Q: What if I am unable to make it to court?</p>
+            <p>A: You can still appeal your ticket by mail</p>
 
         </section>
     </body>
