--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
             <h3>Other helpful links</h3>
             <a href="https://www.cbsnews.com/chicago/news/parking-tickets-contest-administrative-hearing-challenge/">CBS News Article</a>
+            <a href="https://donotpay.com/learn/chicago-parking-tickets/">AI Parking Ticket Bot</a>
         </section>
 
         <section id="guide">
