added img and stuff

--- a/index.html
+++ b/index.html
@@ -11,37 +11,76 @@
            <p>In the 28th Ward the most common traffic violations are missing or improper display of a city sticker (964125),
                street cleaning (0964040B), no city sticker vehicle less than or equal to 16k lbs (0964125B), rear and front plate required (0976160A), and expired plates or temporary registration (0976160F). For each of these violations, if you choose to appeal you have a chance greater than 50% of winning. 
            </p>
+           <p>Despite this fact, most tickets go uncontested. In addition to this, many people end up unintentionally falling into crippling debt due to repeated violations that they are unable to address due to poverty (such as buying a city sticker). </p> <!-- add more to this -->
+           <!-- Give percentages for winning each of the most common violations -->
 
+           <h3>Graphs</h3>
+           <img src="img/Contested vs Uncontested.png" alt="A bar graph contrasting the large number of uncontested violations with the small number of contested violations"/>
+           <img src="img/Liable vs NonLiable.png" alt="A bar graph showing how most motorists were found unliable when they challenged their ticket in court"/>
+
+           <!-- EXPLAIN STUFF-->
+           <h3>Explanation of Stats</h3>
+           <p>As you can see lorem ipsum</p>
         </section>
 
         <section id="resources">
             <h2>Resources</h2>
             <h3>Handout</h3>
+            <!-- Insert link-->
             <a href="">Give the following handout to your friends to print out and share with others!</a>
 
             <h3>Appeal Printout</h3>
+            <!-- Insert link-->
             <a href="" target="_blank">Download a PDF version of our appeal template to bring with you to your hearing!</a>
 
+            <h3>Social Media</h3>
+            <!--Insert link-->
+            <a href="">Visit our social media page!</a>
+
             <h3>Other helpful links</h3>
-            <a href="https://www.cbsnews.com/chicago/news/parking-tickets-contest-administrative-hearing-challenge/">CBS News Article</a>
-            <a href="https://donotpay.com/learn/chicago-parking-tickets/">AI Parking Ticket Bot</a>
+            <ul>
+                <li><a href="https://www.cbsnews.com/chicago/news/parking-tickets-contest-administrative-hearing-challenge/">CBS News Article</a></li>
+                <li><a href="https://donotpay.com/learn/chicago-parking-tickets/">AI Parking Ticket Bot</a></li>
+                <li><a href="https://www.chicago.gov/city/en/depts/fin/supp_info/revenue/challenging_tickets/contesting_in_person.html">List of Allowable Defenses</a></li>
+            </ul>
         </section>
 
         <section id="guide">
+            <!-- Need to fill out this section-->
+            <h2>Allowable Defenses Summary</h2>
+            <p>The following are a list of allowable defenses: </p>
+            <ul>
+                <li><p>foobar</p></li>
+            </ul>
 
+            <p>If your violation pertains to an expired city sticker or license plate you are also allowed these defenses:</p>
+            <ul>
+                <li><p>foobar</p></li>
+            </ul>
+
+            <!-- Add more to this-->
+            <h2>Rhetorical Appeals</h2>
+            <h3>Logos</h3>
+            <p>Logos is an appeal to the audience's reason. When you make your appeal, you want to primarily rely on the logical appeal. You will want to explain to the judge clearly and with evidence how you did not actually commit the violation of which you were accused and cite the specific allowed defense that you are using to make your case. </p>
+            <h3>Pathos</h3>
+            <p>Pathos is an appeal to the audience's emotions. This is the appeal that you avoid. The judge does not want to hear about how your sister is sick in the hospital because he's heard it all a million times before.</p>
+            <h3>Ethos</h3>
+            <p>Ethos is an appeal to authority. Again, you should not very heavily rely on this rhetorical appeal when you are challenging your ticket. However, do ensure that you are addressing the judge with his proper title such as calling them "sir/ma'am" or "your honor"</p>
         </section>
 
         <section id="appeal">
-
+            <!-- Waiting on appeal guy to finish writing the template-->
+            <p>foobar</p>
         </section>
 
         <section id="FAQ">
             <h2>FAQ</h2>
+            <!--Add and answer more potential questions visitors of the site might have-->
             <p>Q: Should I appeal my ticket even if I am guilty of the violation?</p>
             <p>A: </p>
 
             <p>Q: What if I am unable to make it to court?</p>
-            <p>A: You can still appeal your ticket by mail</p>
+            <p>A: You can still appeal your ticket by mail. However, it is better if you show up to your trial live.</p>
 
         </section>
     </body>
