--- a/index.html
+++ b/index.html
@@ -6,43 +6,25 @@
     </head>
 
     <body>
+        <header>
+            <h1>Take It to the Streets!</h1>
+            <p>Have you ever gotten a ticket and thought to yourself, "Man, this is bogus! There is no way I'm liable for this!"? If so, you're in the right place! Take It to the Streets is a nonprofit organization that is dedicated to helping you win your day at traffic court.</p>
+
+            <p>Each year in Chicago, thousands of underprivileged and minority motorists find themselves spiraling into debt because of tickets they can't pay. For instance, those that find themselves with a fine for a missing or expired city sticker can't afford to pay to get a city sticker nor are they able to afford to pay the ticket. These motorists end up getting fined for the same offense that they are unable to rectify and rack up hundreds if not thousands of dollars owed to pay off their tickets, potentially leading to them losing their license or having their vehicle impounded. The 28th Ward contains many such motorists as it has a large proportion of underprivileged, minority constituents. The city's ticket policy is unfair and hurts wards like yours the most, which is why we have decided to "adopt" your ward in an effort to prevent you and your neighbors from suffering like so many others have.</p>
+        </header>
+
         <section id="statistics">
            <h2>Parking Violation Statistics</h2>
-           <p>In the 28th Ward the most common traffic violations are missing or improper display of a city sticker (964125),
-               street cleaning (0964040B), no city sticker vehicle less than or equal to 16k lbs (0964125B), rear and front plate required (0976160A), and expired plates or temporary registration (0976160F). For each of these violations, if you choose to appeal you have a chance greater than 50% of winning. 
-           </p>
-           <p>Despite this fact, most tickets go uncontested. In addition to this, many people end up unintentionally falling into crippling debt due to repeated violations that they are unable to address due to poverty (such as buying a city sticker). </p> <!-- add more to this -->
-           <!-- Give percentages for winning each of the most common violations -->
+           <p>Thinking about how unfair the city's ticket policy is, you might also be thinking to yourself that the process for appealing your ticket is stacked against you, too. This is not the case! Although the process seems intimidating, probably intentionally so, once you successfully schedule an appeal your chance of being let off the hook are quite high.</p>
 
-           <h3>Graphs</h3>
-           <img src="img/Contested vs Uncontested.png" alt="A bar graph contrasting the large number of uncontested violations with the small number of contested violations"/>
-           <img src="img/Liable vs NonLiable.png" alt="A bar graph showing how most motorists were found unliable when they challenged their ticket in court"/>
+           <p>In the 28th Ward the most common traffic violations are missing or improper display of a city sticker (964125), vehicle parked during street cleaning (0964040B), no city sticker for a vehicle less 16k lbs (0964125B), missing rear and front plate (0976160A), and expired plates or temporary registration (0976160F). For each of these violations, if you choose to appeal you have a chance greater than 50% of winning, as you can see in our charts below.</p>
 
-           <!-- EXPLAIN STUFF-->
-           <h3>Explanation of Stats</h3>
-           <p>As you can see lorem ipsum</p>
-        </section>
+           <img src="img/CountContest.png" alt="A bar graph contrasting the large number of uncontested violations with the small number of contested violations for each of the top 5 traffic violations in the 28th ward"/>
+           <img src="img/CountLiable.png" alt="A bar graph showing how most motorists were found unliable when they challenged their ticket in court for each of the top 5 violations in the 28th ward"/>
+           <img src="img/PercentContest.png" alt="A pi chart showing that over 90% of the top 5 violations in the 28th ward go uncontested"/>
+           <img src="img/PercentLiable.png" alt="A pi chart showing that almost 2/3 of those who appeal one of the top 5 violations in the 28th ward win their appeal"/>
 
-        <section id="resources">
-            <h2>Resources</h2>
-            <h3>Handout</h3>
-            <!-- Insert link-->
-            <a href="">Give the following handout to your friends to print out and share with others!</a>
-
-            <h3>Appeal Printout</h3>
-            <!-- Insert link-->
-            <a href="" target="_blank">Download a PDF version of our appeal template to bring with you to your hearing!</a>
-
-            <h3>Social Media</h3>
-            <!--Insert link-->
-            <a href="">Visit our social media page!</a>
-
-            <h3>Other helpful links</h3>
-            <ul>
-                <li><a href="https://www.cbsnews.com/chicago/news/parking-tickets-contest-administrative-hearing-challenge/">CBS News Article</a></li>
-                <li><a href="https://donotpay.com/learn/chicago-parking-tickets/">AI Parking Ticket Bot</a></li>
-                <li><a href="https://www.chicago.gov/city/en/depts/fin/supp_info/revenue/challenging_tickets/contesting_in_person.html">List of Allowable Defenses</a></li>
-            </ul>
+           <p>You can also see in the charts that most tickets go uncontested, despite the fact that those who contest them often come out on top. Do not make the same mistake as them! In some cases where motorists choose to let their tickets pile up, they are forced to file Chapter 13 bankruptcy in order to recover from the staggering amount they owe. The best way to avoid suffering crippling financial consequences from traffic tickets is to fight them rather than let them accrue. There is no need to stress or worry anymore about your tickets, because if you follow the steps we outline below, you'll be prepared to challenge any ticket that comes your way!</p>
         </section>
 
         <section id="guide">
@@ -73,11 +55,34 @@
             <p>foobar</p>
         </section>
 
+        <section id="resources">
+            <h2>Resources</h2>
+            <h3>Handout</h3>
+            <!-- Insert link-->
+            <a href="">Give the following handout to your friends to print out and share with others!</a>
+
+            <h3>Appeal Printout</h3>
+            <!-- Insert link-->
+            <a href="" target="_blank">Download a PDF version of our appeal template to bring with you to your hearing!</a>
+
+            <h3>Social Media</h3>
+            <!--Insert link-->
+            <a href="">Visit our social media page!</a>
+
+            <h3>Other helpful links</h3>
+            <ul>
+                <li><a href="https://www.cbsnews.com/chicago/news/parking-tickets-contest-administrative-hearing-challenge/">CBS News Article</a></li>
+                <li><a href="https://donotpay.com/learn/chicago-parking-tickets/">AI Parking Ticket Bot</a></li>
+                <li><a href="https://www.chicago.gov/city/en/depts/fin/supp_info/revenue/challenging_tickets/contesting_in_person.html">List of Allowable Defenses</a></li>
+                <li><a href="https://features.propublica.org/driven-into-debt/chicago-ticket-debt-bankruptcy/">Pro Publica Article</a></li>
+            </ul>
+        </section>
+
         <section id="FAQ">
             <h2>FAQ</h2>
             <!--Add and answer more potential questions visitors of the site might have-->
             <p>Q: Should I appeal my ticket even if I am guilty of the violation?</p>
-            <p>A: </p>
+            <p>A: It depends on the violation. For instance, if you are ticketed for not having an expired city sticker or license plate, </p>
 
             <p>Q: What if I am unable to make it to court?</p>
             <p>A: You can still appeal your ticket by mail. However, it is better if you show up to your trial live.</p>
