--- a/index.html
+++ b/index.html
@@ -21,18 +21,23 @@
 
            <img src="img/CountContest.png" alt="A bar graph contrasting the large number of uncontested violations with the small number of contested violations for each of the top 5 traffic violations in the 28th ward"/>
            <img src="img/CountLiable.png" alt="A bar graph showing how most motorists were found unliable when they challenged their ticket in court for each of the top 5 violations in the 28th ward"/>
-           <img src="img/PercentContest.png" alt="A pi chart showing that over 90% of the top 5 violations in the 28th ward go uncontested"/>
-           <img src="img/PercentLiable.png" alt="A pi chart showing that almost 2/3 of those who appeal one of the top 5 violations in the 28th ward win their appeal"/>
+           <img src="img/PercentContest.png" alt="A pie chart showing that over 90% of the top 5 violations in the 28th ward go uncontested"/>
+           <img src="img/PercentLiable.png" alt="A pie chart showing that almost 2/3 of those who appeal one of the top 5 violations in the 28th ward win their appeal"/>
 
            <p>You can also see in the charts that most tickets go uncontested, despite the fact that those who contest them often come out on top. Do not make the same mistake as them! In some cases where motorists choose to let their tickets pile up, they are forced to file Chapter 13 bankruptcy in order to recover from the staggering amount they owe. The best way to avoid suffering crippling financial consequences from traffic tickets is to fight them rather than let them accrue. There is no need to stress or worry anymore about your tickets, because if you follow the steps we outline below, you'll be prepared to challenge any ticket that comes your way!</p>
         </section>
 
         <section id="guide">
+            <h2>How Do I Appeal?</h2>
+            <p>If your violation was captured by automated traffic law enforcement such as a red light camera, you have 21 days from the date you are issued your Notice of Violation to contest the ticket. Otherwise, you have 7 days to contest the ticket; however, you will be sent a Notice of Violation if no response is recieved within 7 days and it functions the same as the Notice of Violation for automated traffic enforcement. If you do not reply to the Notice of Violation within 21 days, you will get a Notice of Determination which will give you another 21 days to contest the ticket. After the 21 days of the Notice of Determination expire, you will recieve a Notice of Final Determination and will have forfeited all rights to challenge your ticket.</p>
+
+            <p>There are many ways to contest your ticket, but we strongly feel that the best method is to contest in-person. While it might be intimidating to have to stand before a judge, <a href="https://www.cbsnews.com/chicago/news/parking-tickets-contest-administrative-hearing-challenge/">this article</a> contains the advice of a self-described expert at challenging parking tickets who believes that you have a better chance of winning the in-person appeal. To schedule a hearing to contest your ticket, fill out <a href="https://erequest.cityofchicago.org/EHearingWeb/home.do">this form.</a></p>
+
             <!-- Need to fill out this section-->
             <h2>Allowable Defenses Summary</h2>
-            <p>The following are a list of allowable defenses: </p>
+            <p>The following are a list of allowable defenses for most parking/compliance tickets: </p>
             <ul>
-                <li><p>foobar</p></li>
+                <li></li>
             </ul>
 
             <p>If your violation pertains to an expired city sticker or license plate you are also allowed these defenses:</p>
@@ -59,7 +64,7 @@
             <h2>Resources</h2>
             <h3>Handout</h3>
             <!-- Insert link-->
-            <a href="">Give the following handout to your friends to print out and share with others!</a>
+            <a href="">Print out the following handout and share it with someone you know. The more people we can prevent paying fines, the better!</a>
 
             <h3>Appeal Printout</h3>
             <!-- Insert link-->
@@ -70,8 +75,8 @@
             <a href="">Visit our social media page!</a>
 
             <h3>Other helpful links</h3>
+            <p>Listed below are some other resources that you may find helpful. We have linked the complete list of allowable traffic ticket defenses, an article that describes the problem that thousands of Chicago motorists have with falling into crippling debt at the hands of traffic tickets, and a link to an AI that can also help you with your argument.</p>
             <ul>
-                <li><a href="https://www.cbsnews.com/chicago/news/parking-tickets-contest-administrative-hearing-challenge/">CBS News Article</a></li>
                 <li><a href="https://donotpay.com/learn/chicago-parking-tickets/">AI Parking Ticket Bot</a></li>
                 <li><a href="https://www.chicago.gov/city/en/depts/fin/supp_info/revenue/challenging_tickets/contesting_in_person.html">List of Allowable Defenses</a></li>
                 <li><a href="https://features.propublica.org/driven-into-debt/chicago-ticket-debt-bankruptcy/">Pro Publica Article</a></li>
@@ -82,11 +87,10 @@
             <h2>FAQ</h2>
             <!--Add and answer more potential questions visitors of the site might have-->
             <p>Q: Should I appeal my ticket even if I am guilty of the violation?</p>
-            <p>A: It depends on the violation. For instance, if you are ticketed for not having an expired city sticker or license plate, </p>
+            <p>A: Absoulutely. For instance if you are ticketed for not having an expired city sticker or license plate, if you correct the issue before your hearing or if your violation occurred between 04/01/2022-12/31/2023 you are not liable. Motorists that recieve parking tickets, such as the ticket expert mentioned before, have won hearings by showing the judge pictures of faded or obscured signs in the zone in which they illegally parked.</p>
 
             <p>Q: What if I am unable to make it to court?</p>
-            <p>A: You can still appeal your ticket by mail. However, it is better if you show up to your trial live.</p>
-
+            <p>A: You can still appeal your ticket by mail, online correspondence, or via a virtual hearing. To appeal by mail you will need to include the stub at the end of your Notice of Violation and fill in the bubble to contest by mail. If appealing via online correspondence, you can use the same form as you would to contest in-person, but just select the option for correspondence or for a virtual hearing. However if possible, it is better if you show up to your trial live.</p> 
         </section>
     </body>
 </html>
